# OneWriter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
include/: OneWriter.hpp
src/: AbstractWriter.cpp  AbstractWriter.hpp  OneWriter.cpp  TXTWriter.cpp  TXTWriter.hpp  WriterBuilder.cpp  WriterBuilder.hpp
src/Adaptors/: AbstractAdaptor.hpp  BlockDataAdaptor.hpp  LinearDataAdaptor.hpp
